--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- FONTAWESOME KIT1 CODE -->
+    <script src="https://kit.fontawesome.com/49cddd94cc.js" crossorigin="anonymous"></script>
     <title>React App</title>
   </head>
   <body>
